# hspf_reader

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BADGES.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  publish.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-package.yml  tests.yml
docs/: command_line.rst  conf.py  function_summary.rst  index.rst
src/hspf_reader/: __init__.py  hspf_reader.py
src/hspf_reader/functions/: hbn.py  plotgen.py  wdm.py
tests/: data_plotgen.plt  data_wdm_1.csv  data_wdm_2.csv  test_hbn.py  test_plotgen.py  test_wdm.py
