[project]
name = "hspf_reader"
dynamic = ["version"]
readme = "README.rst"
description = "Command line script and Python library to manipulate time series."
requires-python = ">=3.7.1"
dependencies = [
    "cltoolbox >= 1.0.0",
    "typical >= 2.6.0",
    "typing-extensions",
    "toolbox_utils <= 1.0.0",
    "numpy",
    "pandas",
    ]
license = {file = "LICENSE.txt"}
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
    ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]
keywords = ["time-series",
            "hspf",
            "simulation",
            "hydrology",
            "hydrologic",
            "python",
            "cli",
            "command line",
            "script",
            "cli-application",
            ]

[project.optional-dependencies]
dev = [
    "black",
    "cleanpy",
    "twine",
    "pytest",
    "coverage",
    "flake8",
    "pytest-cov",
    "pytest-mpl",
    "pre-commit",
    "black-nbconvert",
    "blacken-docs",
    "velin",
    "isort",
    "pyroma",
    "pyupgrade",
    "commitizen",
    "functiontrace",
    ]

[project.scripts]
hspf_reader = "hspf_reader.hspf_reader:main"

[project_urls]
documentation = "https://timcera.bitbucket.io/hspf_reader/docs/index.html#hspf_reader-documentation"
github = "https://github.com/timcera/hspf_reader"
bitbucket = "https://bitbucket.org/timcera/hspf_reader/src/main/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["examples*", "tools*", "docs*", "hspf_reader.tests*"]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[tool.check-manifest]
ignore = ["docs/_function_autosummary/*",
          ".coverage",
          ".deepsource.toml",
          ".ipynb_checkpoints/*"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = ["VERSION"]
update_changelog_on_bump = true
